--- a/app/src/main/res/layout/card_article_layout.xml
+++ b/app/src/main/res/layout/card_article_layout.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="180dp"
-    android:layout_height="250dp"
+    android:layout_height="270dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
-    app:cardCornerRadius="10dp">
+    android:layout_margin="15dp"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="2dp">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
@@ -30,9 +31,18 @@
               android:layout_marginLeft="5dp"
               android:layout_centerInParent="true"
               android:text="Men's"
-              android:textFontWeight="@integer/config_navAnimTime"
-              android:textColor="@color/colorPrimary"
-              android:textSize="19dp" />
+
+
+              android:textSize="15dp" />
+      <RatingBar
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_margin="3dp"
+          android:id="@+id/ratingBar"
+          style="?android:attr/ratingBarStyleSmall"
+          android:numStars="3"
+
+          android:stepSize="0.5"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -46,10 +56,10 @@
                 android:id="@+id/currency"
                 android:layout_width="wrap_content"
                 android:adjustViewBounds="true"
-                android:layout_margin="5dp"
+                android:layout_margin="1dp"
                 android:scaleType="centerCrop"
                 android:layout_height="wrap_content"
-                android:src="@drawable/taka" />
+                android:src="@drawable/unnamed" />
         </RelativeLayout>
 
 
@@ -60,11 +70,12 @@
                 android:layout_margin="3dp"
                 android:layout_centerInParent="true"
                 android:text="3000"
-                android:textFontWeight="@integer/config_navAnimTime"
+
                 android:textColor="@color/colorPrimary"
-                android:textSize="19dp" />
+                android:textSize="20dp" />
 
     </LinearLayout>
+
   </LinearLayout>
 
 </androidx.cardview.widget.CardView>
