--- a/app/src/main/res/layout/trending_category_layout.xml
+++ b/app/src/main/res/layout/trending_category_layout.xml
@@ -8,12 +8,13 @@
     tools:context=".HomeFragment">
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="440dp"
 
-        android:layout_marginBottom="380dp"
+        android:layout_marginTop="440dp"
         android:layout_marginRight="290dp"
+        android:layout_marginBottom="380dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,15 +25,12 @@
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
             android:layout_height="wrap_content"
-            card_view:cardPreventCornerOverlap="false"
             android:layout_margin="3dp"
             android:layout_weight="4"
             app:cardBackgroundColor="@color/colorPrimary"
             app:cardCornerRadius="10dp"
+            card_view:cardPreventCornerOverlap="false"
             tools:ignore="MissingConstraints">
-
-
-
 
 
             <RelativeLayout
@@ -48,26 +46,24 @@
                     android:layout_marginStart="2dp"
                     android:layout_marginBottom="8dp"
                     android:text="Trendings"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:textFontWeight="@integer/config_navAnimTime"
                     android:textColor="#FFFFFF"
-                    />
+                    android:textFontWeight="@integer/config_navAnimTime"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
 
         </androidx.cardview.widget.CardView>
 
 
-
-
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="595dp"
 
+        android:layout_marginTop="595dp"
         android:layout_marginBottom="380dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -79,11 +75,11 @@
         <androidx.cardview.widget.CardView
             android:layout_width="95dp"
             android:layout_height="110dp"
-            card_view:cardPreventCornerOverlap="false"
             android:layout_margin="3dp"
             android:layout_weight="4"
             app:cardBackgroundColor="#FFFFFF"
             app:cardCornerRadius="10dp"
+            card_view:cardPreventCornerOverlap="false"
             tools:ignore="MissingConstraints">
 
             <LinearLayout
@@ -98,9 +94,9 @@
                     <ImageView
                         android:id="@+id/mens_category_img_id"
                         android:layout_width="match_parent"
+                        android:layout_height="90dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:layout_height="90dp"
                         android:src="@drawable/men" />
                 </RelativeLayout>
 
@@ -116,8 +112,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="New Arrivals"
-                        android:textFontWeight="@integer/config_navAnimTime"
                         android:textColor="@color/colorPrimary"
+                        android:textFontWeight="@integer/config_navAnimTime"
                         android:textSize="13dp" />
                 </RelativeLayout>
             </LinearLayout>
@@ -149,7 +145,7 @@
                         android:layout_height="90dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/men"/>
+                        android:src="@drawable/men" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -164,8 +160,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="Women's"
-                        android:textFontWeight="@integer/config_navAnimTime"
                         android:textColor="@color/colorPrimary"
+                        android:textFontWeight="@integer/config_navAnimTime"
                         android:textSize="13dp" />
                 </RelativeLayout>
             </LinearLayout>
@@ -194,9 +190,9 @@
                     <ImageView
                         android:id="@+id/kids_category_img_id"
                         android:layout_width="match_parent"
+                        android:layout_height="90dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:layout_height="90dp"
                         android:src="@drawable/men" />
                 </RelativeLayout>
 
@@ -212,8 +208,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="Kid's"
-                        android:textFontWeight="@integer/config_navAnimTime"
                         android:textColor="@color/colorPrimary"
+                        android:textFontWeight="@integer/config_navAnimTime"
                         android:textSize="13dp" />
                 </RelativeLayout>
             </LinearLayout>
@@ -242,9 +238,9 @@
                     <ImageView
                         android:id="@+id/accessories_category_img_id"
                         android:layout_width="match_parent"
+                        android:layout_height="90dp"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:layout_height="90dp"
                         android:src="@drawable/men" />
                 </RelativeLayout>
 
@@ -260,8 +256,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:text="Accessories"
-                        android:textFontWeight="@integer/config_navAnimTime"
                         android:textColor="@color/colorPrimary"
+                        android:textFontWeight="@integer/config_navAnimTime"
 
                         android:textSize="13dp" />
                 </RelativeLayout>
@@ -272,6 +268,15 @@
 
     </LinearLayout>
 
+    <androidx.viewpager.widget.ViewPager
+        android:id="@+id/image_viewPager"
+        android:layout_width="409dp"
+        android:layout_height="373dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
