--- a/app/src/main/res/layout/size_view.xml
+++ b/app/src/main/res/layout/size_view.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="60dp"
-    android:layout_height="70dp"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="15dp"
-    app:cardCornerRadius="5dp"
+    android:layout_margin="5dp"
+    app:cardCornerRadius="3dp"
     app:cardElevation="2dp">
 
     <TextView
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content"
         android:id="@+id/size_text"
         android:text="34"
-        android:textStyle="bold"
-        android:textSize="30dp"
-        android:layout_margin="13dp"/>
 
-</androidx.cardview.widget.CardView>
+        android:textSize="20dp"
+        android:textColor="@color/colorAccent"
+        android:layout_margin="10dp"/>
+
+</FrameLayout>
