--- a/app/src/main/res/layout/activity_article_details.xml
+++ b/app/src/main/res/layout/activity_article_details.xml
@@ -237,24 +237,24 @@
 
            </LinearLayout>
 
-           <LinearLayout
-               android:layout_width="match_parent"
-               android:layout_height="56dp"
-               android:orientation="horizontal"
-               android:elevation="8dp"
 
-               app:layout_constraintBottom_toBottomOf ="parent"
-               app:layout_constraintEnd_toEndOf ="parent"
-               app:layout_constraintStart_toStartOf ="parent">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content"
+           android:background="#FFFFFF"
+           android:layout_marginTop="5dp"
+           android:orientation="horizontal">
+           <Button
+               android:layout_width="150dp"
+               android:layout_height="35dp"
+               android:id="@+id/order_id"
+               android:text="Buy Now"
+               android:layout_marginStart="130dp"
+               android:background="@color/colorAccent"/>
+       </LinearLayout>
 
-               <TextView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:background="@color/colorAccent"
-                   android:text="Likhon"
-                   android:textSize="20dp"
 
-           </LinearLayout>
+
        </LinearLayout>
 
 
