Order Details Implement

--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -6,6 +6,70 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".OrderDetails">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Quantity                                                   "
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:textSize="16dp"
+            android:textStyle="bold"/>
+        <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
+            android:id="@+id/number_button"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_margin="10dp"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Price                                                                "
+
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:textSize="16dp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/total_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="16dp"
+            android:layout_marginTop="15dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Select Size                                               "
+
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="15dp"
+            android:textSize="16dp"
+            android:textStyle="bold"/>
+        <Spinner
+            android:id="@+id/show_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="15dp"/>
+
+    </LinearLayout>
+
 
      <EditText
          android:id="@+id/address_id"
@@ -29,5 +93,16 @@
         android:layout_margin="16dp"
         android:textColor="#fff"
         android:background="@color/colorPrimary"/>
+
+    <TextView
+        android:id="@+id/show_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Spinner"
+        android:layout_marginStart="10dp"/>
+
+
+
+
 
 </LinearLayout>
