--- a/app/src/main/res/layout/activity_article_details.xml
+++ b/app/src/main/res/layout/activity_article_details.xml
@@ -249,7 +249,14 @@
                android:layout_height="35dp"
                android:id="@+id/order_id"
                android:text="Buy Now"
-               android:layout_marginStart="130dp"
+               android:layout_marginStart="35dp"
+               android:background="@color/colorAccent"/>
+           <Button
+               android:layout_width="150dp"
+               android:layout_height="35dp"
+               android:id="@+id/add_to_cart_id"
+               android:text="Add to Cart"
+               android:layout_marginStart="35dp"
                android:background="@color/colorAccent"/>
        </LinearLayout>
 
