--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -9,6 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -24,12 +25,22 @@
             android:layout_height="30dp"
             android:layout_margin="10dp"
 
-            android:background="@drawable/elegant_border"
             />
     </LinearLayout>
+     <LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="horizontal"
+         android:layout_margin="5dp"
+         android:background="@drawable/elegant_border">
+         <TextView
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"/>
+     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
@@ -49,7 +60,16 @@
             android:layout_marginTop="15dp"/>
 
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="5dp"
+        android:background="@drawable/elegant_border">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -72,7 +92,16 @@
 
     </LinearLayout>
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_margin="5dp"
+        android:background="@drawable/elegant_border">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
      <EditText
          android:id="@+id/address_id"
                 android:layout_width="match_parent"
