Implement notification badge in cart

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#FF4500</color>
     <color name="colorPrimaryDark">#C81505</color>
     <color name="colorAccent">#DC3625</color>
+    <color name="colorWhite">#FFFFFF</color>
 </resources>
