--- a/app/src/main/res/layout/notification_badge.xml
+++ b/app/src/main/res/layout/notification_badge.xml
@@ -19,7 +19,7 @@
          android:id="@+id/badge_id"
          android:background="@drawable/badge_notification"
          android:layout_gravity="center"
-
+         android:textAlignment="center"
          android:layout_marginLeft="14dp"
          android:layout_marginBottom="15dp"
          android:text="12"
