--- a/app/src/main/res/menu/home.xml
+++ b/app/src/main/res/menu/home.xml
@@ -6,7 +6,7 @@
     <item
         android:id="@+id/search_id"
 
-        android:icon="@drawable/search"
+        android:icon="@drawable/ic_search"
         app:showAsAction="always|collapseActionView"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         android:title="Search" />
@@ -21,7 +21,7 @@
     <item
         android:id="@+id/notification_id"
 
-        android:icon="@drawable/notification"
+        android:icon="@drawable/ic_notifications"
         app:showAsAction="always"
         android:title="Notification" />
 
