--- a/app/src/main/res/layout/add_to_cart_details.xml
+++ b/app/src/main/res/layout/add_to_cart_details.xml
@@ -121,6 +121,27 @@
 
             </LinearLayout>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Qty:"
+                android:textSize="20sp"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="20dp"/>
+            <TextView
+                android:id="@+id/button_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2"
+                android:textSize="20sp"
+                android:layout_marginTop="50dp"
+                android:layout_marginStart="10dp"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
