--- a/app/src/main/res/layout/bottom_layout_add_to_cart.xml
+++ b/app/src/main/res/layout/bottom_layout_add_to_cart.xml
@@ -215,7 +215,7 @@
             android:textSize="16dp"
             android:textStyle="bold"/>
         <com.cepheuen.elegantnumberbutton.view.ElegantNumberButton
-            android:id="@+id/number_button"
+            android:id="@+id/quantity_button_add_to_cart"
             android:layout_width="100dp"
             android:layout_height="30dp"
             android:layout_margin="10dp"
